\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}
\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\name{NEWS}
\title{ pqR News}
\encoding{UTF-8}


\section{CHANGES IN VERSION RELEASED 2017-??-??}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item pqR now uses a new garbage collector.
  }}

}


\section{CHANGES IN VERSION RELEASED 2016-10-24}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item This is a small maintenance release, fixing a few bugs and installation
        problems.
  }}

  \subsection{INSTALLATION}{
  \itemize{
  \item When building pqR on a Mac, some Mac-specific source files
        are now compiled with the default 'gcc' (really clang on
        recent Macs), regardless of what C compiler has been specified
        for other uses.  This is necessary to bypass problems with
        Apple-supplied header files on El Capitan and Sierra. There are
        also a few other tweaks to building on a Mac.
  }}

  \subsection{BUG FIXES}{
  \itemize{
  \item Some bugs have been fixed involving the interaction of finalizers
        and active bindings with some pqR optimizations, one of which
        showed up when building with clang on a Mac.
  }}
}


\section{CHANGES IN VERSION RELEASED 2016-10-05}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item With this release, pqR, which was based on R-2.15.0, now incorporates
        the new features, bug fixes, and some relevant performance improvements
        from R-2.15.1.  The pqR version number 
        has been advanced to 2.15.1 to reflect this.  (This version number is
        checked when trying to install packages.)

        Note that there could still be incompatibilities with packages
        that work with R-2.15.1, either because of bugs in pqR, or because
        a package may rely on a bug that is fixed in pqR, or because
        pqR implements some changes from R Core versions after R-2.15.1 that